# epub-tools

./: .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  Epub_Tool_TKUI.py  Epub_Tool_TKUI_OLD.py  INDEPENDENCE.md  README.md  package.json  pnpm-lock.yaml  prettier.config.mjs  setup.ps1  setup.sh  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  release.yml  test.yml
crates/epub-cli/: Cargo.toml
crates/epub-cli/src/: main.rs
crates/epub-cli/src/commands/: decrypt.rs  doctor.rs  encrypt.rs  mod.rs  reformat.rs
crates/epub-core/: Cargo.toml
crates/epub-core/src/: lib.rs
crates/epub-core/src/crypto/: decrypt.rs  encrypt.rs  mod.rs
crates/epub-core/src/epub/: mod.rs  parser.rs  writer.rs  xml_utils.rs
crates/epub-core/src/image/: compressor.rs  mod.rs  webp_converter.rs
crates/epub-core/src/utils/: error.rs  mod.rs
docs/: comparison-with-wangyyyqw-epub.md  epubpro-v1-plan.md  plan-epubToolsV2-updated.md  plan-epubToolsV3-rust-core.md
docs/archive/: plan-epubToolsV2-updated.md
py-scripts/: encrypt_font.py  requirements.txt
skills/: README.md
skills/py/: font-diff.py  font-info.py  glyph-preview.py
skills/ts/: charset-scan.ts  epub-info.ts  find-broken-links.ts
tests/core/: compressor.test.ts  crypto.test.ts  decrypt.test.ts  encrypt.test.ts  parser.test.ts  reformat.test.ts  tool-checker.test.ts  upgrade.test.ts  webp-converter.test.ts
tests/fixtures/: .gitkeep
