[workspace]
members = [
    "crates/epub-core",
    "crates/epub-cli",
    # Tauri GUI shares the workspace
    "packages/gui/src-tauri",
]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/liyafly/epub-tools"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1", features = ["full"] }

# EPUB processing
zip = "2"
quick-xml = "0.37"
md-5 = "0.10"
regex = "1"
encoding_rs = "0.8"

# HTML / CSS
scraper = "0.22"

# String similarity
strsim = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }

# Image processing
image = "0.25"

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
