[package]
name = "epub-core"
description = "EPUB processing core library — pure Rust, no UI dependencies"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["image-processing"]
image-processing = ["dep:image"]
# Mobile builds can disable desktop-only features
mobile = []

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# EPUB processing
zip = { workspace = true }
quick-xml = { workspace = true }

# Crypto
md-5 = { workspace = true }

# Regex & Encoding
regex = { workspace = true }
encoding_rs = { workspace = true }

# HTML
scraper = { workspace = true }

# String similarity
strsim = { workspace = true }

# Image (optional, desktop/CLI only for heavy processing)
image = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
